--- a/public/app/template.html
+++ b/public/app/template.html
@@ -28,6 +28,14 @@
                         (click)="onSaveLog()">Save
                 </button>
             </div>
+            <div class="btn-group" role="group">
+                <span style="margin-left: 10px;">
+                    Sprint: <span style="color: #00B8FF">{{config.sprint}}</span>
+                </span>
+                <span style="margin-left: 10px;">
+                    Counter: <span style="color: #00B8FF">{{config.counter}}</span> seconds
+                </span>
+            </div>
 
             <div class="gray">
                 <span class="pull-right">count: {{logs.length}}</span>
