- fixed Stop button  - added task grouping  - copy func

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,8 @@
     <link rel="stylesheet" href="./assets/flipclock/flipclock.css">
 
     <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script src="http://momentjs.com/downloads/moment.min.js"></script>
     <script src="./assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="./assets/nedb.min.js"></script>
-
     <script src="./assets/flipclock/flipclock.min.js"></script>
 
     <script src="./node_modules/es6-shim/es6-shim.min.js"></script>
