- fixed links (https compatibility)  - added Chart  - changed summary block

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/flipclock/flipclock.css">
 
-    <script src="http://code.jquery.com/jquery-2.2.0.min.js"></script>
-    <script src="http://momentjs.com/downloads/moment.min.js"></script>
+    <script src="./assets/jquery-2.2.0.min.js"></script>
+    <script src="./assets/highcharts.js"></script>
+    <script src="./assets/dark-unica.js"></script>
+    <script src="./assets/moment.min.js"></script>
     <script src="./assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="./assets/flipclock/flipclock.min.js"></script>
 
