- deleted highcharts, since it is not useful

--- a/public/app/template.html
+++ b/public/app/template.html
@@ -42,17 +42,9 @@
                         counter: <span style="color: #3498db">{{config.counter}}</span>,
                     </span>
                     <span style="margin-left: 10px;">
-                        sprint: <span style="color: #3498db">{{config.sprint}}</span>,
-                    </span>
-                    <span style="margin-left: 10px;">
-                        showBar: <span style="color: #3498db">{{config.showBar}}</span>
+                        sprint: <span style="color: #3498db">{{config.sprint}}</span>
                     </span>
                     <span style="margin-left: 5px;">}</span>
-                </div>
-            </div>
-            <div class="panel panel-default" style="margin-top: 1em;" [hidden]="!config.showBar">
-                <div class="panel-body">
-                    <div id="chart"></div>
                 </div>
             </div>
             <div class="gray">
