- refactoring: created NotificationService, clock moved to ClockService

--- a/public/app/template.html
+++ b/public/app/template.html
@@ -36,7 +36,7 @@
                     <span style="margin-left: 10px;">@configuration:</span>
                     <span style="margin-left: 10px;">{</span>
                     <span style="margin-left: 5px;">
-                        today: <span style="color: #3498db">{{today}}</span>,
+                        today: <span style="color: #3498db">{{config.day}}</span>,
                     </span>
                     <span style="margin-left: 10px;">
                         counter: <span style="color: #3498db">{{config.counter}}</span>,
